<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ai_utils_msgs</name>
  <version>0.0.1</version>
  <description>Interfaces and message definitions for ai_utils</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <author>Gennaro Raiola</author>

  <license>GNU General Public License v3.0</license>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">message_generation</depend>
  <depend condition="$ROS_VERSION == 1">message_runtime</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
  </export>

</package>
